[tool.poetry]
name = "leet-code-python"
version = "0.1.0"
description = ""
authors = ["Kamal Hashi <kamalweheliye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
